[package]
name = "atheon-launchpad"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "1.1.0"
blake2b-ref = "0.3"

[features]
default = []

[profile.release]
overflow-checks = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "atheon-launchpad"
path = "src/main.rs"
